@@ -1648,13 +1648,15 @@ ceil_test (void)
   TEST_f_f (ceil, -4503599627370496.5L, -4503599627370496.0L);
   TEST_f_f (ceil, -4503599627370496.75L, -4503599627370496.0L);
   TEST_f_f (ceil, -4503599627370497.5L, -4503599627370497.0L);
-  
+
+# if LDBL_MANT_DIG > 100
   TEST_f_f (ceil, 4503599627370494.5000000000001L, 4503599627370495.0L);
   TEST_f_f (ceil, 4503599627370495.5000000000001L, 4503599627370496.0L);
   TEST_f_f (ceil, 4503599627370496.5000000000001L, 4503599627370497.0L);
   TEST_f_f (ceil, -4503599627370494.5000000000001L, -4503599627370494.0L);
   TEST_f_f (ceil, -4503599627370495.5000000000001L, -4503599627370495.0L);
   TEST_f_f (ceil, -4503599627370496.5000000000001L, -4503599627370496.0L);
+# endif
 
   TEST_f_f (ceil, 9007199254740991.5L, 9007199254740992.0L);
   TEST_f_f (ceil, 9007199254740992.25L, 9007199254740993.0L);
@@ -1668,6 +1670,7 @@ ceil_test (void)
   TEST_f_f (ceil, -9007199254740992.75L, -9007199254740992.0L);
   TEST_f_f (ceil, -9007199254740993.5L, -9007199254740993.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (ceil, 9007199254740991.0000000000001L, 9007199254740992.0L);
   TEST_f_f (ceil, 9007199254740992.0000000000001L, 9007199254740993.0L);
   TEST_f_f (ceil, 9007199254740993.0000000000001L, 9007199254740994.0L);
@@ -1681,6 +1684,7 @@ ceil_test (void)
   TEST_f_f (ceil, -9007199254740991.5000000000001L, -9007199254740991.0L);
   TEST_f_f (ceil, -9007199254740992.5000000000001L, -9007199254740992.0L);
   TEST_f_f (ceil, -9007199254740993.5000000000001L, -9007199254740993.0L);
+# endif
 
   TEST_f_f (ceil, 72057594037927935.5L, 72057594037927936.0L);
   TEST_f_f (ceil, 72057594037927936.25L, 72057594037927937.0L);
@@ -2667,18 +2671,22 @@ floor_test (void)
   TEST_f_f (floor, 4503599627370496.5L, 4503599627370496.0L);
   TEST_f_f (floor, 4503599627370496.75L, 4503599627370496.0L);
   TEST_f_f (floor, 4503599627370497.5L, 4503599627370497.0L);
+# if LDBL_MANT_DIG > 100
   TEST_f_f (floor, 4503599627370494.5000000000001L, 4503599627370494.0L);
   TEST_f_f (floor, 4503599627370495.5000000000001L, 4503599627370495.0L);
   TEST_f_f (floor, 4503599627370496.5000000000001L, 4503599627370496.0L);
+# endif
 
   TEST_f_f (floor, -4503599627370495.5L, -4503599627370496.0L);
   TEST_f_f (floor, -4503599627370496.25L, -4503599627370497.0L);
   TEST_f_f (floor, -4503599627370496.5L, -4503599627370497.0L);
   TEST_f_f (floor, -4503599627370496.75L, -4503599627370497.0L);
   TEST_f_f (floor, -4503599627370497.5L, -4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
   TEST_f_f (floor, -4503599627370494.5000000000001L, -4503599627370495.0L);
   TEST_f_f (floor, -4503599627370495.5000000000001L, -4503599627370496.0L);
   TEST_f_f (floor, -4503599627370496.5000000000001L, -4503599627370497.0L);
+# endif
 
   TEST_f_f (floor, 9007199254740991.5L, 9007199254740991.0L);
   TEST_f_f (floor, 9007199254740992.25L, 9007199254740992.0L);
@@ -2686,12 +2694,14 @@ floor_test (void)
   TEST_f_f (floor, 9007199254740992.75L, 9007199254740992.0L);
   TEST_f_f (floor, 9007199254740993.5L, 9007199254740993.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (floor, 9007199254740991.0000000000001L, 9007199254740991.0L);
   TEST_f_f (floor, 9007199254740992.0000000000001L, 9007199254740992.0L);
   TEST_f_f (floor, 9007199254740993.0000000000001L, 9007199254740993.0L);
   TEST_f_f (floor, 9007199254740991.5000000000001L, 9007199254740991.0L);
   TEST_f_f (floor, 9007199254740992.5000000000001L, 9007199254740992.0L);
   TEST_f_f (floor, 9007199254740993.5000000000001L, 9007199254740993.0L);
+# endif
 
   TEST_f_f (floor, -9007199254740991.5L, -9007199254740992.0L);
   TEST_f_f (floor, -9007199254740992.25L, -9007199254740993.0L);
@@ -2699,12 +2709,14 @@ floor_test (void)
   TEST_f_f (floor, -9007199254740992.75L, -9007199254740993.0L);
   TEST_f_f (floor, -9007199254740993.5L, -9007199254740994.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (floor, -9007199254740991.0000000000001L, -9007199254740992.0L);
   TEST_f_f (floor, -9007199254740992.0000000000001L, -9007199254740993.0L);
   TEST_f_f (floor, -9007199254740993.0000000000001L, -9007199254740994.0L);
   TEST_f_f (floor, -9007199254740991.5000000000001L, -9007199254740992.0L);
   TEST_f_f (floor, -9007199254740992.5000000000001L, -9007199254740993.0L);
   TEST_f_f (floor, -9007199254740993.5000000000001L, -9007199254740994.0L);
+# endif
 
   TEST_f_f (floor, 72057594037927935.5L, 72057594037927935.0L);
   TEST_f_f (floor, 72057594037927936.25L, 72057594037927936.0L);
@@ -4033,9 +4045,11 @@ rint_test (void)
   TEST_f_f (rint, 4503599627370496.75L, 4503599627370497.0L);
   TEST_f_f (rint, 4503599627370497.5L, 4503599627370498.0L);
   
+# if LDBL_MANT_DIG > 100
   TEST_f_f (rint, 4503599627370494.5000000000001L, 4503599627370495.0L);
   TEST_f_f (rint, 4503599627370495.5000000000001L, 4503599627370496.0L);
   TEST_f_f (rint, 4503599627370496.5000000000001L, 4503599627370497.0L);
+# endif
 
   TEST_f_f (rint, -4503599627370495.5L, -4503599627370496.0L);
   TEST_f_f (rint, -4503599627370496.25L, -4503599627370496.0L);
@@ -4043,6 +4057,7 @@ rint_test (void)
   TEST_f_f (rint, -4503599627370496.75L, -4503599627370497.0L);
   TEST_f_f (rint, -4503599627370497.5L, -4503599627370498.0L);
   
+# if LDBL_MANT_DIG > 100
   TEST_f_f (rint, -4503599627370494.5000000000001L, -4503599627370495.0L);
   TEST_f_f (rint, -4503599627370495.5000000000001L, -4503599627370496.0L);
   TEST_f_f (rint, -4503599627370496.5000000000001L, -4503599627370497.0L);
@@ -4060,6 +4075,7 @@ rint_test (void)
   TEST_f_f (rint, -9007199254740991.5000000000001L, -9007199254740992.0L);
   TEST_f_f (rint, -9007199254740992.5000000000001L, -9007199254740993.0L);
   TEST_f_f (rint, -9007199254740993.5000000000001L, -9007199254740994.0L);
+# endif
 
   TEST_f_f (rint, 9007199254740991.5L, 9007199254740992.0L);
   TEST_f_f (rint, 9007199254740992.25L, 9007199254740992.0L);
@@ -4128,14 +4144,17 @@ rint_test_tonearest (void)
     TEST_f_f (rint, 4503599627370496.5L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370496.75L, 4503599627370497.0L);
     TEST_f_f (rint, 4503599627370497.5L, 4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, 4503599627370494.5000000000001L, 4503599627370495.0L);
     TEST_f_f (rint, 4503599627370495.5000000000001L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370496.5000000000001L, 4503599627370497.0L);
+# endif
     TEST_f_f (rint, -4503599627370495.5L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.25L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.5L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.75L, -4503599627370497.0L);
     TEST_f_f (rint, -4503599627370497.5L, -4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, -4503599627370494.5000000000001L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370495.5000000000001L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.5000000000001L, -4503599627370497.0L);
@@ -4153,6 +4172,7 @@ rint_test_tonearest (void)
     TEST_f_f (rint, -9007199254740991.5000000000001L, -9007199254740992.0L);
     TEST_f_f (rint, -9007199254740992.5000000000001L, -9007199254740993.0L);
     TEST_f_f (rint, -9007199254740993.5000000000001L, -9007199254740994.0L);
+# endif
 #endif
   }
 
@@ -4194,14 +4214,17 @@ rint_test_towardzero (void)
     TEST_f_f (rint, 4503599627370496.5L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370496.75L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370497.5L, 4503599627370497.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, 4503599627370494.5000000000001L, 4503599627370494.0L);
     TEST_f_f (rint, 4503599627370495.5000000000001L, 4503599627370495.0L);
     TEST_f_f (rint, 4503599627370496.5000000000001L, 4503599627370496.0L);
+# endif
     TEST_f_f (rint, -4503599627370495.5L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370496.25L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.5L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.75L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370497.5L, -4503599627370497.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, -4503599627370494.5000000000001L, -4503599627370494.0L);
     TEST_f_f (rint, -4503599627370495.5000000000001L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370496.5000000000001L, -4503599627370496.0L);
@@ -4219,6 +4242,7 @@ rint_test_towardzero (void)
     TEST_f_f (rint, -9007199254740991.5000000000001L, -9007199254740991.0L);
     TEST_f_f (rint, -9007199254740992.5000000000001L, -9007199254740992.0L);
     TEST_f_f (rint, -9007199254740993.5000000000001L, -9007199254740993.0L);
+# endif
 #endif
   }
 
@@ -4260,14 +4284,17 @@ rint_test_downward (void)
     TEST_f_f (rint, 4503599627370496.5L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370496.75L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370497.5L, 4503599627370497.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, 4503599627370494.5000000000001L, 4503599627370494.0L);
     TEST_f_f (rint, 4503599627370495.5000000000001L, 4503599627370495.0L);
     TEST_f_f (rint, 4503599627370496.5000000000001L, 4503599627370496.0L);
+# endif
     TEST_f_f (rint, -4503599627370495.5L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.25L, -4503599627370497.0L);
     TEST_f_f (rint, -4503599627370496.5L, -4503599627370497.0L);
     TEST_f_f (rint, -4503599627370496.75L, -4503599627370497.0L);
     TEST_f_f (rint, -4503599627370497.5L, -4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, -4503599627370494.5000000000001L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370495.5000000000001L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.5000000000001L, -4503599627370497.0L);
@@ -4285,6 +4312,7 @@ rint_test_downward (void)
     TEST_f_f (rint, -9007199254740991.5000000000001L, -9007199254740992.0L);
     TEST_f_f (rint, -9007199254740992.5000000000001L, -9007199254740993.0L);
     TEST_f_f (rint, -9007199254740993.5000000000001L, -9007199254740994.0L);
+# endif
 #endif
   }
 
@@ -4326,14 +4354,17 @@ rint_test_upward (void)
     TEST_f_f (rint, 4503599627370496.5L, 4503599627370497.0L);
     TEST_f_f (rint, 4503599627370496.75L, 4503599627370497.0L);
     TEST_f_f (rint, 4503599627370497.5L, 4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, 4503599627370494.5000000000001L, 4503599627370495.0L);
     TEST_f_f (rint, 4503599627370495.5000000000001L, 4503599627370496.0L);
     TEST_f_f (rint, 4503599627370496.5000000000001L, 4503599627370497.0L);
+# endif
     TEST_f_f (rint, -4503599627370495.5L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370496.25L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.5L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370496.75L, -4503599627370496.0L);
     TEST_f_f (rint, -4503599627370497.5L, -4503599627370497.0L);
+# if LDBL_MANT_DIG > 100
     TEST_f_f (rint, -4503599627370494.5000000000001L, -4503599627370494.0L);
     TEST_f_f (rint, -4503599627370495.5000000000001L, -4503599627370495.0L);
     TEST_f_f (rint, -4503599627370496.5000000000001L, -4503599627370496.0L);
@@ -4351,6 +4382,7 @@ rint_test_upward (void)
     TEST_f_f (rint, -9007199254740991.5000000000001L, -9007199254740991.0L);
     TEST_f_f (rint, -9007199254740992.5000000000001L, -9007199254740992.0L);
     TEST_f_f (rint, -9007199254740993.5000000000001L, -9007199254740993.0L);
+# endif
 #endif
   }
 
@@ -4390,18 +4422,22 @@ round_test (void)
   TEST_f_f (round, 4503599627370496.5L, 4503599627370497.0L); 
   TEST_f_f (round, 4503599627370496.75L, 4503599627370497.0L);
   TEST_f_f (round, 4503599627370497.5L, 4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
   TEST_f_f (round, 4503599627370494.5000000000001L, 4503599627370495.0L);
   TEST_f_f (round, 4503599627370495.5000000000001L, 4503599627370496.0L);
   TEST_f_f (round, 4503599627370496.5000000000001L, 4503599627370497.0L);
+# endif
 
   TEST_f_f (round, -4503599627370495.5L, -4503599627370496.0L); 
   TEST_f_f (round, -4503599627370496.25L, -4503599627370496.0L); 
   TEST_f_f (round, -4503599627370496.5L, -4503599627370497.0L);
   TEST_f_f (round, -4503599627370496.75L, -4503599627370497.0L); 
   TEST_f_f (round, -4503599627370497.5L, -4503599627370498.0L);
+# if LDBL_MANT_DIG > 100
   TEST_f_f (round, -4503599627370494.5000000000001L, -4503599627370495.0L);
   TEST_f_f (round, -4503599627370495.5000000000001L, -4503599627370496.0L);
   TEST_f_f (round, -4503599627370496.5000000000001L, -4503599627370497.0L);
+# endif
 
   TEST_f_f (round, 9007199254740991.5L, 9007199254740992.0L);
   TEST_f_f (round, 9007199254740992.25L, 9007199254740992.0L);
@@ -4415,6 +4451,7 @@ round_test (void)
   TEST_f_f (round, -9007199254740992.75L, -9007199254740993.0L);
   TEST_f_f (round, -9007199254740993.5L, -9007199254740994.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (round, 9007199254740991.0000000000001L, 9007199254740991.0L);
   TEST_f_f (round, 9007199254740992.0000000000001L, 9007199254740992.0L);
   TEST_f_f (round, 9007199254740993.0000000000001L, 9007199254740993.0L);
@@ -4428,6 +4465,7 @@ round_test (void)
   TEST_f_f (round, -9007199254740991.5000000000001L, -9007199254740992.0L);
   TEST_f_f (round, -9007199254740992.5000000000001L, -9007199254740993.0L);
   TEST_f_f (round, -9007199254740993.5000000000001L, -9007199254740994.0L);
+# endif
 
   TEST_f_f (round, 72057594037927935.5L, 72057594037927936.0L);
   TEST_f_f (round, 72057594037927936.25L, 72057594037927936.0L);
@@ -4827,9 +4865,11 @@ trunc_test (void)
   TEST_f_f (trunc, 4503599627370496.75L, 4503599627370496.0L);
   TEST_f_f (trunc, 4503599627370497.5L, 4503599627370497.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (trunc, 4503599627370494.5000000000001L, 4503599627370494.0L);
   TEST_f_f (trunc, 4503599627370495.5000000000001L, 4503599627370495.0L);
   TEST_f_f (trunc, 4503599627370496.5000000000001L, 4503599627370496.0L);
+# endif
   
   TEST_f_f (trunc, -4503599627370495.5L, -4503599627370495.0L);
   TEST_f_f (trunc, -4503599627370496.25L, -4503599627370496.0L);
@@ -4837,9 +4877,11 @@ trunc_test (void)
   TEST_f_f (trunc, -4503599627370496.75L, -4503599627370496.0L);
   TEST_f_f (trunc, -4503599627370497.5L, -4503599627370497.0L);
   
+# if LDBL_MANT_DIG > 100
   TEST_f_f (trunc, -4503599627370494.5000000000001L, -4503599627370494.0L);
   TEST_f_f (trunc, -4503599627370495.5000000000001L, -4503599627370495.0L);
   TEST_f_f (trunc, -4503599627370496.5000000000001L, -4503599627370496.0L);
+# endif
 
   TEST_f_f (trunc, 9007199254740991.5L, 9007199254740991.0L);
   TEST_f_f (trunc, 9007199254740992.25L, 9007199254740992.0L);
@@ -4847,12 +4889,14 @@ trunc_test (void)
   TEST_f_f (trunc, 9007199254740992.75L, 9007199254740992.0L);
   TEST_f_f (trunc, 9007199254740993.5L, 9007199254740993.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (trunc, 9007199254740991.0000000000001L, 9007199254740991.0L);
   TEST_f_f (trunc, 9007199254740992.0000000000001L, 9007199254740992.0L);
   TEST_f_f (trunc, 9007199254740993.0000000000001L, 9007199254740993.0L);
   TEST_f_f (trunc, 9007199254740991.5000000000001L, 9007199254740991.0L);
   TEST_f_f (trunc, 9007199254740992.5000000000001L, 9007199254740992.0L);
   TEST_f_f (trunc, 9007199254740993.5000000000001L, 9007199254740993.0L);
+# endif
 
   TEST_f_f (trunc, -9007199254740991.5L, -9007199254740991.0L);
   TEST_f_f (trunc, -9007199254740992.25L, -9007199254740992.0L);
@@ -4860,12 +4904,14 @@ trunc_test (void)
   TEST_f_f (trunc, -9007199254740992.75L, -9007199254740992.0L);
   TEST_f_f (trunc, -9007199254740993.5L, -9007199254740993.0L);
 
+# if LDBL_MANT_DIG > 100
   TEST_f_f (trunc, -9007199254740991.0000000000001L, -9007199254740991.0L);
   TEST_f_f (trunc, -9007199254740992.0000000000001L, -9007199254740992.0L);
   TEST_f_f (trunc, -9007199254740993.0000000000001L, -9007199254740993.0L);
   TEST_f_f (trunc, -9007199254740991.5000000000001L, -9007199254740991.0L);
   TEST_f_f (trunc, -9007199254740992.5000000000001L, -9007199254740992.0L);
   TEST_f_f (trunc, -9007199254740993.5000000000001L, -9007199254740993.0L);
+# endif
 
   TEST_f_f (trunc, 72057594037927935.5L, 72057594037927935.0L);
   TEST_f_f (trunc, 72057594037927936.25L, 72057594037927936.0L);
